--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: polar-ingress
@@ -10,7 +10,5 @@ spec:
           - path: /
             pathType: Prefix
             backend:
-              service:
-                name: edge-service
-                port: 
-                  number: 80
+              serviceName: edge-service
+              servicePort: 80
