--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -43,8 +43,9 @@ jobs:
         with:
           kubectl: 1.24.3
           kubeval: 0.16.1
+          # Different schema required because of https://github.com/instrumenta/kubeval/issues/301
           command: | 
-            kubeval --strict -d k8s
+            kubeval --strict --schema-location https://raw.githubusercontent.com/yaannh/kubernetes-json-schema/master -d k8s
   package:
     name: Package and Publish
     if: ${{ github.ref == 'refs/heads/master' }}
@@ -66,7 +67,8 @@ jobs:
       - name: Build container image
         run: | 
           chmod +x mvnw 
-          ./mvnw spring-boot:build-image -Ddocker.name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+          ./mvnw spring-boot:build-image \
+            -Ddocker.name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
       - name: OCI image vulnerablilty scanning
         uses: anchore/scan-action@v3
         id: scan
@@ -86,6 +88,4 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }} 
       - name: Publish container image
-        run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
-
-                           
+        run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}                          
