--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -35,4 +35,5 @@ spec:
               value: http://config-service
             - name: SPRING_REDIS_HOST
               value: polar-reds
- 
+            - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI
+              value: http://polar-keycloak/realms/PolarBookshop 
