--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,7 @@ spring:
           max-life-time: 60s
       default-filters:
         - SaveSession
+        - TokenRelay
         - name: RequestRateLimiter
           args:
             redis-rate-limiter:
@@ -51,6 +52,10 @@ spring:
               factor: 2
               basedOnPrevioueValue: false 
       routes:
+        - id: spa-route
+          uri: ${SPA_URL:http://localhost:9004}
+          predicates:
+            - Path=/,/*.css,/*.js,/favicon.ico
         - id: catalog-route
           uri: ${CATALOG_SERVICE_URL:http://localhost:9001}/books
           predicates:
@@ -78,7 +83,18 @@ spring:
     timeout: 10m
     redis:
       namespace: polar:edge
-                
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            client-id: edge-service
+            client-secret: polar-keycloak-secret
+            scope: openid,roles
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:8080/realms/PolarBookshop
+                            
 resilience4j:
   circuitbreaker:
     configs:
@@ -92,7 +108,14 @@ resilience4j:
       default:
         timeout-duration: 5s
 
-#logging:
-#  level:
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+logging:
+  level:
+    '[com.polarbookshop.edgeservice]': DEBUG
 #    '[io.github.resilience4j]': DEBUG
             
