--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: polar-ingress
@@ -10,5 +10,7 @@ spec:
           - path: /
             pathType: Prefix
             backend:
-              serviceName: edge-service
-              servicePort: 80
+              service:
+                name: edge-service
+                port: 
+                  number: 80
