Downgrade Security Version

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -34,6 +34,6 @@ spec:
             - name: SPRING_CLOUD_CONFIG_URI
               value: http://config-service
             - name: SPRING_REDIS_HOST
-              value: polar-reds
-            - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI
+              value: polar-redis
+            - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI
               value: http://polar-keycloak/realms/PolarBookshop 
