--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: polar-ingress
+  labels:
+    app: polar-ingress
 spec:
   ingressClassName: nginx
   rules:
